Reverting change to method as it does not account for sub-assemblies or sub-components of differing Process Groups